added homepage view + partials 'nav' and 'header'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= scrivito_header_tags %>
 </head>
 <body>
+<%= render partial: 'cms/header' %>
+<%= render partial: 'cms/nav' %>
 
 <%= yield %>
 
