--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -1,2 +1,5 @@
-<%= cms_tag :h1, @obj, :title %>
+<div class="page-header">
+  <%= cms_tag :h1, @obj, :title %>
+</div>
+<%= render partial: 'cms/breadcrumbs' %>
 <%= display_field @obj, :body %>
