--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require application/foundation_icons_general_enclosed
+ *= require application/foundation_icons_general
+ *= require application/foundation_icons_social
  *= require application/app
  */
