--- a/app/views/cms/_nav.html.erb
+++ b/app/views/cms/_nav.html.erb
@@ -1,3 +1,6 @@
+
+<% if false %>
+<!-- classic simple navi -->
 <%= cms_tag_list(:ul, @obj.homepage, :toclist, class: "nav navbar-nav", id: "main_nav") do |list, item| %>
   <% list.tag(:li, id: "main_nav_page_#{item.id}", data: { path: item.path }) do %>
     <%= link_to(cms_path(item)) do %>
@@ -5,3 +8,53 @@
     <% end %>
   <% end %>
 <% end %>
+<% end %>
+
+<nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
+  <ul class="nav navbar-nav">
+    <% @obj.homepage.toclist.each do |item| %>
+      <li class="dropdown">
+        <a data-toggle="dropdown" class="dropdown-toggle" href="<%= cms_path(item) %>"><%= display_value item.title %><span class="caret"></span></a>
+        <ul role="menu" class="dropdown-menu">
+          <% item.toclist.each do |subitem| %>
+            <li>
+              <%= link_to subitem.title, cms_path(subitem) %>
+            </li>
+          <% end %>
+        </ul>
+      </li>
+    <% end %>
+  </ul>
+  <form class="navbar-form navbar-right">
+    <input type="text" placeholder="Search..." class="form-control">
+  </form>
+  <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Contact us</a></li>
+            <li class="dropdown">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">Countries <span class="caret"></span></a>
+              <ul role="menu" class="dropdown-menu">
+                <li class="dropdown-header">Europe</li>
+                <li><a href="#">Austria</a></li>
+                <li><a href="#">Croatia</a></li>
+                <li><a href="#">Czech Republic</a></li>
+                <li><a href="#">Denmark</a></li>
+                <li><a href="#">Finland</a></li>
+                <li><a href="#">France</a></li>
+                <li><a href="#">Germany</a></li>
+                <li><a href="#">Greece</a></li>
+                <li><a href="#">Hungary</a></li>
+                <li><a href="#">Italy</a></li>
+                <li><a href="#">Norway</a></li>
+                <li><a href="#">Poland</a></li>
+                <li><a href="#">Portugal</a></li>
+                <li><a href="#">Serbia</a></li>
+                <li><a href="#">Slovakia</a></li>
+                <li><a href="#">Slovenia</a></li>
+                <li><a href="#">Spain</a></li>
+                <li><a href="#">Switzerland</a></li>
+                <li><a href="#">Turkey</a></li>
+                <li><a href="#">UK</a></li>
+              </ul>
+            </li>
+  </ul>
+</nav>
