--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <meta charset="UTF-8" />
+  <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
   <title>ScrivUno</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
+  <link rel="apple-touch-icon-precomposed" href="<%= asset_path('apple-touch-icon-precomposed') %>">
+  <link rel="shortcut icon" href="<%= asset_path('favicon') %>">
+
+  <!-- stylesheets -->
   <%= stylesheet_link_tag    'application', media: 'all' %>
+
+  <!-- javascript -->
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <%= scrivito_header_tags %>
+
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
+  <link rel="icon" href="/favicon.ico">
+
 </head>
 <body>
+  <div class="bg_white">
+    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
+    <header role="banner" id="top" class="navbav">
+      <div class="container">
+
 <%= render partial: 'cms/header' %>
 <%= render partial: 'cms/nav' %>
 
+      </div>
+    </header>
+    <div class="container margin_top" id="#content">
+
 <%= yield %>
+
+    </div><!-- /#content -->
+  </div>
+  <%= render 'cms/footer' %>
+
 
 <% if inplace_editing_allowed? %>
   <%= javascript_include_tag 'editing' %>
