--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -264,6 +264,11 @@ ul {padding-left:20px;}
 .carousel-control {width:7%; opacity:.2; @include transition(all .3s ease-in-out); }
 .carousel-control i {font-size:30px; line-height:400px;}
 
+/* Editing-View of Carousel */
+.carousel-inner .item.editing-view {height:150px;}
+.carousel-inner .item.editing-view > img {min-width: 100px; max-width: 400px; }
+.carousel-inner .item.editing-view .carousel-caption {bottom: 0; padding: 0;}
+
 /* breadcrumb
 ================================================== */
 
