--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,13 @@
 
       </div>
     </header>
+
+<% if false %>
+  <%= render 'cms/static/slider' %>
+<% end %>
+
+
+
     <div class="container margin_top" id="#content">
 
 <%= yield %>
