added widget field to Homepage

--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -1,4 +1,4 @@
 <div class="page-header">
   <%= cms_tag :h1, @obj, :title %>
 </div>
-<%= display_field @obj, :body %>
+<%= cms_tag :div, @obj, :main_content %>
