--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,5 @@
  *= require application/foundation_icons_general
  *= require application/foundation_icons_social
  *= require application/app
+ *= require scrivito_elastic_slider/application
  */
