--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -11,10 +11,14 @@ $btn-default-bg:                 #eee !default;
 $btn-default-border:             #eee !default;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 #6d99b4 !default;
-$btn-primary-border:             #6d99b4 !default;
+$btn-primary-bg:                 #465b66 !default;
+$btn-primary-border:             #465b66 !default;
 
-$input-border-focus:             #6d99b4 !default;
+$btn-success-color:              #fff !default;
+$btn-success-bg:                 #78c9a6 !default;
+$btn-success-border:             #78c9a6 !default;
+
+$input-border-focus:             #465b66 !default;
 
 // Core variables and mixins
 @import "bootstrap/_variables";
@@ -140,17 +144,17 @@ body {
 
 .container { position:relative;}
 
-a { color: #4d7994; text-decoration: none; }
-a:hover, a:active, a:focus { color: #4d7994; text-decoration: none; }
+a { color: #465b66; text-decoration: none; }
+a:hover, a:active, a:focus { color: #465b66; text-decoration: none; }
 
-::selection { color:#4d7994; background:#cae3f3; }
-::-moz-selection { color:#4d7994; background:#cae3f3; }
+::selection { color:#465b66; background:#77c8a5; }
+::-moz-selection { color:#465b66; background:#77c8a5; }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Signika', sans-serif;
   font-weight: 400;
-  color: #4d7994;
+  color: #465b66;
   margin: 0 0 10px 0;
   padding: 0;
   }
@@ -194,9 +198,9 @@ ul {padding-left:20px;}
 
 .navbar {margin:0;}
 .navbar-toggle .icon-bar { background-color: #008256; }
-.navbar-brand { margin:5px 0;
-  height: 50px; width: 135px; overflow:hidden; text-indent:-1000px;
-  background: #ddd image_url('logo_ifco.svg') no-repeat 0 0 / cover ;
+.navbar-brand { margin:10px 0;
+  height: 40px; width: 105px; overflow:hidden; text-indent:-1000px;
+  background: image_url('dummy/logo.svg') no-repeat 0 0 / cover ;
   }
 
 .nav > li > a { @include transition(all .3s ease-in-out);}
@@ -223,7 +227,7 @@ ul {padding-left:20px;}
 .dropdown-menu > li:first-child > a { border-top:1px solid #fff;}
 
 .dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus { background:#cae3f3; color:#444; }
+.dropdown-menu > li > a:focus { background:#f3f4f5; color:#444; }
 .dropdown-header {padding: 4px 15px; background:#e3e3e3; text-transform:uppercase; font-size:10px; color:#333;}
 
 .flap a{ background:#fff; display:inline-block; line-height:35px;
@@ -251,8 +255,18 @@ ul {padding-left:20px;}
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
     border-top: 0px;
 }
-.panel-title > a { color: #4d7994;}
+.panel-title > a { color: #465b66;}
 
+
+/* nav-tabs
+================================================== */
+
+.nav-tabs { border-bottom:2px solid #ddd; margin:10px 0;}
+.nav-tabs > li { margin: 0; }
+.nav-tabs > li > a { border-radius:0; border:0px; background:transparent; font-size:16px;}
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus { background:#eee; border:0px; margin:0;}
 
 /* Carousel
 ================================================== */
@@ -264,6 +278,9 @@ ul {padding-left:20px;}
 .carousel-control {width:7%; opacity:.2; @include transition(all .3s ease-in-out); }
 .carousel-control i {font-size:30px; line-height:400px;}
 
+.carousel-caption h1,
+.carousel-caption .h1 { font-size:50px; color:#fff;}
+.carousel-caption p { font-size:22px; line-height:1.5em;}
 
 /* breadcrumb
 ================================================== */
@@ -363,13 +380,24 @@ ul {padding-left:20px;}
 /* bg_*
 ================================================== */
 
+.bg_white,
+.bg_grey1,
+.bg_grey2,
+.bg_grey2,
+.bg_green,
+.bg_image  { @include clearfix; padding:10px 0 20px 0;}
+
+
 .bg_white { background:#fff;}
 .bg_grey1 { background:#eee;}
 .bg_grey2 { background:#e3e3e3;}
+.bg_grey3 { background:#666;}
 
-.bg_darkgrey { background:#666;}
-.bg_green { background:#e6f1e8; padding:0 0 20px 0;}
+.bg_green { background:#e6f1e8;}
 .bg_green h4 { color:#008256;}
+
+.bg_blue { background:#465b66;}
+.bg_image {background: #ddd image_url('dummy/bg_image1.jpg') no-repeat 0 0 / cover ;}
 
 
 /* headline *
@@ -378,7 +406,7 @@ ul {padding-left:20px;}
 .headline { border-bottom: 2px solid #ddd; display: block; margin: 10px 0 15px;}
 .headline h2,
 .headline h3,
-.headline h4 { border-bottom: 4px solid #6d99b4; display: inline-block;
+.headline h4 { border-bottom: 4px solid #465b66; display: inline-block;
   margin: 0 0 -2px; padding-bottom: 5px;
   }
 
@@ -386,7 +414,7 @@ ul {padding-left:20px;}
 ================================================== */
 
 .box_white,
-.box_grey { padding:10px 15px; margin: 15px 0 25px 0;
+.box_grey { padding:10px 15px; margin: 0 0 25px 0;
   background:#fff;box-shadow:0 0 3px rgba(0,0,0,.25);
   @include clearfix;
   }
@@ -569,12 +597,12 @@ ul.icon_list,
 .footer ul { list-style-type:none; margin:0 0 50px 0; padding:0; @include clearfix;}
 .footer ul li { display:block; float:left;}
 
-.footer ul li a { display:block; float:left; color:#999; font-size:12px; padding:10px 10px 10px 0;}
+.footer ul li a { display:block; float:left; color:#ccc; font-size:12px; padding:10px 10px 10px 0;}
 .footer ul li a:after { content:'|'; margin: 0 0 0 10px;}
 .footer ul li:last-child a:after {content:''; }
 
-.footer .adress {line-height:16px; font-size:10px;color: #888; font-weight: 400; margin:0; text-align:left;}
-.footer .logo {background: image_url('logo_ifco.svg') no-repeat center; display:block; width:110px; height:40px; margin-left:-10px;}
+.footer .adress {line-height:16px; font-size:10px;color: #ccc; font-weight: 400; margin:0; text-align:left;}
+.footer .logo {background: image_url('dummy/logo_sw.svg') no-repeat center; display:block; width:110px; height:40px; margin-left:-10px;}
 
 
 /* slick-slider
@@ -605,7 +633,7 @@ ul.icon_list,
 .slick-loading .slick-track { visibility: hidden; }
 
 .slick-slide { float: left; height: 100%; min-height: 1px; display: none; }
-.slick-slide img { display: block; }
+.slick-slide img { display: block; width:100px; height:100px; border-radius:50px; overflow:hidden; margin:0 auto;}
 .slick-slide.slick-loading img { display: none; }
 .slick-slide.dragging img { pointer-events: none; }
 .slick-initialized .slick-slide { display: block; }
@@ -621,25 +649,29 @@ ul.icon_list,
 .slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before { opacity: 1; }
 .slick-prev.slick-disabled:before, .slick-next.slick-disabled:before { opacity: 0.25; }
 
-.slick-prev:before, .slick-next:before { font-family:"web_iconsregular"; font-style:normal; font-weight:normal;
-  color:#4d7994; font-size:33px; line-height: 1; opacity: 0.5; text-align:center;
+.slick-prev:before, .slick-next:before {
+  font-family: "foundation_icons_general_enclosed";
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: inherit; color:#aaa;
+  font-size:33px; line-height: 1; opacity: 0.5; text-align:center;
   vertical-align: middle; line-height: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   }
 
 .slick-prev { left: -5px; }
-.slick-prev:before { content:"\F001"; }
+.slick-prev:before { content: "\f015"; }
 
 .slick-next { right: -5px; }
-.slick-next:before { content:"\F002"; }
+.slick-next:before { content: "\f014"; }
 
 /* Dots */
 .slick-slider { margin-bottom: 40px; }
 
 .slick-dots { position: absolute; bottom: -45px; list-style: none; display: block; text-align: center; padding: 0; width: 100%; }
 .slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0 5px; padding: 0; cursor: pointer; }
-.slick-dots li button { border: 0; background: #eee; display: block;
+.slick-dots li button { border: 0; background: #fff; display: block;
   height: 7px; width: 7px; outline: none; line-height: 0;
   font-size: 0; color: transparent; padding: 0; cursor: pointer;
   border-radius:50%;
