--- a/app/views/cms/_footer.html.erb
+++ b/app/views/cms/_footer.html.erb
@@ -1,4 +1,4 @@
-  <div class="bg_darkgrey footer">
+  <div class="bg_blue footer">
     <div class="container">
       <div class="row">
         <div class="col-md-10">
