--- a/app/views/headline_widget/show.html.erb
+++ b/app/views/headline_widget/show.html.erb
@@ -1,1 +1,3 @@
-<%= cms_tag(:h3, widget, :headline, id: widget.anchor.presence, class: 'h2') %>
+<div class="headline">
+  <%= cms_tag(:h3, widget, :headline, id: widget.anchor.presence) %>
+</div>
