--- a/app/views/listitem_widget/details.html.erb
+++ b/app/views/listitem_widget/details.html.erb
@@ -1,27 +1,20 @@
 <div class="details-view">
-  <h4>
-    Headline
-  </h4>
-  <%= cms_edit_string(widget, :headline) %>
+  <h4>Headline</h4>
+  <%= cms_tag(:p, widget, :headline) %>
 
-  <h4>
-    Subline
-  </h4>
-  <%= cms_edit_string(widget, :subline) %>
+  <h4>Headline Size</h4>
+  <%= cms_edit_enum(widget, :headline_level) %>
 
-  <h4>
-    Text 
-  </h4>
-  <%= cms_edit_text(widget, :content) %>
+  <h4>Subline</h4>
+  <%= cms_tag(:p, widget, :subline) %>
 
-  <h4>
-    Image 
-  </h4>
-  <%= cms_edit_image(widget, :image) %>
+  <h4>Text</h4>
+  <%= cms_tag(:p, widget, :content) %>
 
-  <h4>
-    Link 
-  </h4>
+  <h4>Image</h4>
+  <%= cms_edit_reference(widget, :image) %>
+
+  <h4>Link</h4>
   <%= cms_edit_link(widget, :link) %>
 
 </div>
