--- a/app/views/listitem_widget/show.html.erb
+++ b/app/views/listitem_widget/show.html.erb
@@ -2,7 +2,8 @@
   <a href="#"></a>
   <%= cms_image_tag widget, :image, class: "square" %>
   <div class="list_item_content">
-    <%= cms_tag :div, widget, :headline, class: "h2" %>
+    <% level = widget.headline_level || "h4" %>
+    <%= cms_tag level.to_sym, widget, :headline %>
     <%= cms_tag :span, widget, :subline, class: "meta" %>
     <%= cms_tag(:p, widget, :content) %>
   </div>
